--- a/index.html
+++ b/index.html
@@ -6,93 +6,55 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/headerAndFooter.css">
+    <link rel="icon" type="image/png" href="images/logo_icon.png" />
+    <title>Welcome to Guild of Mafia</title>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="js/hiddenMenu.js"></script>
-    <link rel="icon" type="image/png" href="images/logo_icon.png">
-    <title>Guild of Mafia</title>
+    <script src="js/landingScript.js"></script>
+
   </head>
   <body>
-    <!-- Header-->
-    <header class="homeHeader">
-      <div class="headLogo"><a href="index.html" title="Home page here!">Guild of Mafia</a></div>
-      <nav>
-        <a class="menuItem" href="gameRules.html" name="Rules of Game" title="Rules here">ПРАВИЛА<br>ИГРЫ</a>
-        <a class="menuItem" href="historyOfMafia.html" name="History of Mafia" title="History of mafia here">ИСТОРИЯ<br>"МАФИИ"</a>
-        <a class="menuItem" href="coaches.html" name="Coaches" title="Info about coaches here">ИНФОРМАЦИЯ<br>О ТРЕНЕРАХ</a>
-        <a class="menuItem" href="#" name="" title="Schedule here">РАССПИСАНИЕ<br>ИГР</a>
-        <a class="menuItem" href="#" name="" title="Info about project here">О ПРОЕКТЕ</a>
-      </nav>
-    </header>
-
-    <div class="hiddenMenu">
-      <div>
-        <nav>
-          <a class="menuItem" href="gameRules.html" name="Rules of Game" title="Rules here">ПРАВИЛА<br>ИГРЫ</a>
-          <a class="menuItem" href="historyOfMafia.html" name="History of Mafia" title="History of mafia here">ИСТОРИЯ<br>"МАФИИ"</a>
-          <a class="menuItem" href="coaches.html" name="Coaches" title="Info about coaches here">ИНФОРМАЦИЯ<br>О ТРЕНЕРАХ</a>
-          <a class="menuItem" href="#" name="" title="Schedule here">РАССПИСАНИЕ<br>ИГР</a>
-          <a class="menuItem" href="#" name="" title="Info about project here">О ПРОЕКТЕ</a>
-        </nav>
-       </div>
-
-      <img src="images/icons/burger.png" alt="burger">
-    </div>
-    <!--End of header-->
-    <!-- content -->
     <div class="page">
 
-      <div class="guildInfo">
+      <h2 id="welcome">And now you do not have a way back</h2>
+      <a id="enterGuildLink" href="index.html"><input type="button" id="enterGuild" name="Enter Guild of Mafia" value="Join us" onclick="#"></a>
 
-        <div class="infoBlock">
-          <h3>Спортивная мафия<br>это:</h3>
-          <hr color="white">
-          <img src="images/info/info-1.jpg" alt="info-1">
-          <p>Отличная возможность размять мозги. В процессе игры Вы будете задействовать все свои коммуника-ционные и психологические навыки, наряду с логическим мышлением и умением подмечать детали.</p><p>Также Вам придется проявить хитрость и смекалку играя за "мафию" для того чтобы обмануть наивных "мирных жителей".</p>
+<!--SLIDER-->
+        <div class="smallImgMenu">
+              <img class="small" src="images/photo/1.jpg" alt="img1">
+              <img class="small" src="images/photo/2.jpg" alt="img2">
+              <img class="small" src="images/photo/3.jpg" alt="img3">
+              <img class="small" src="images/photo/4.jpg" alt="img4">
+              <img class="small" src="images/photo/5.jpg" alt="img5">
+              <img class="small" src="images/photo/6.jpg" alt="img6">
+              <img class="small" src="images/photo/7.jpg" alt="img7">
+              <img class="small" src="images/photo/8.jpg" alt="img8">
+              <img class="small" src="images/photo/9.jpg" alt="img9">
+              <img class="small" src="images/photo/10.jpg" alt="img10">
+              <img class="small" src="images/photo/11.jpg" alt="img11">
+              <img class="small" src="images/photo/12.jpg" alt="img12">
+              <img class="small" src="images/photo/13.jpg" alt="img13">
+              <img class="small" src="images/photo/14.jpg" alt="img14">
+              <img class="small" src="images/photo/15.jpg" alt="img15">
+              <img class="small" src="images/photo/16.jpg" alt="img16">
+              <img class="small" src="images/photo/17.jpg" alt="img17">
+              <img class="small" src="images/photo/18.jpg" alt="img18">
+              <img class="small" src="images/photo/19.jpg" alt="img19">
+              <img class="small" src="images/photo/20.jpg" alt="img20">
         </div>
 
-        <div class="infoBlock">
-          <h3>Спортивная мафия<br>это:</h3>
-          <hr color="white">
-          <img src="images/info/info-2.jpg" alt="info-2">
-          <p>Ключ к самосовершенство-ванию. Игра помогает развить характер, открыть в себе новые способности. Речь становится увереннее и убедительнее, а мышление – более осознанным, системным и обоснованным. Люди учатся рассуждать и приводить аргументы.</p>
-        </div>
+        <div class="popUpBox"></div>
+              <div class="popUp">
+                <div class="controls">
+                  <img id="popUpImage" src="" alt="">
+                  <div class="close"><img src="images/close.png" alt="Close"></div>
+                  <div class="prev"><img src="images/prev.png" alt="Previous"></div>
+                  <div class="next"><img src="images/next.png" alt="Next"></div>
+                </div>
+              </div>
+<!--End of Slider-->
 
-        <div class="infoBlock">
-          <h3>Спортивная мафия<br>это:</h3>
-          <hr color="white">
-          <img src="images/info/info-3.jpg" alt="info-3">
-          <p>Возможность реализовать себя.<br> Существует огромное количество турниров, в том числе и международных, за первинство в которых боятся десятки и сотни людей. Их цель - выиграть ценные призы, показать свой интеллектуальный уровень окружающим, доказать себе свои способности и получить почётное звание "Победитель", прославив себя в мафиозном сообществе.</p>
-        </div>
 
-        <div class="infoBlock">
-          <h3>Спортивная мафия<br>это:</h3>
-          <hr color="white">
-          <img src="images/info/info-4.jpg" alt="info-4">
-          <p>Несравненный досуг. Больое количество белорусских игроков, а также игроки из Росиии, Украины, Латвии, Казахстана, Германии, уделяет "Мафии" несколько вечеров в неделю и так уже на протяжениии нескольких лет. Есть игроки, у которых игровой стаж перевалил за 5 лет. Также существуют "мастадонты" игры, он посвятили этой игре более 10 лет.</p><p>Все это потому, что "Мафия" сближает людей. Играя в мафию ты автоматически находишь себе огромное количествто единомышленников, знакомых и, конечно, друзей.</p>
-        </div>
-
-      </div>
     </div>
-    <!--FOOTER -->
-    <footer>
-      <img src="images/logo_gm.png" alt="logo">
-      <div class="contacts">
-        <a id="tel" href="tel:+375 (33) 366 30 87">+375 (33) 366 30 87</a>
-        <a id="vk" href="https://vk.com/guild.mafia">Мы - ВК</a>
-        <a id="yT" href="https://www.youtube.com/channel/UCrIfWozfCsFBYdbkbpbNa4A?view_as=subscriber">Мы на YouTube</a>
-        <a id="instagram" href="https://www.instagram.com/mafiavero/">Мы в Instagram</a>
-      </div>
-
-      <nav>
-        <a class="footerItem" href="gameRules.html" name="Game of Rules" title="Game rules here">ПРАВИЛА ИГРЫ</a>
-        <a class="footerItem" href="historyOfMafia.html" name="History of Mafia" title="History of Mafia here">ИСТОРИЯ "МАФИИ"</a>
-        <a class="footerItem" href="coaches.html" name="Coaches" title="Info about coaches here">ИНФОРМАЦИЯ О ТРЕНЕРАХ</a>
-        <a class="footerItem" href="#" name="" title="Schedule here">РАССПИСАНИЕ ИГР</a>
-        <a class="footerItem" href="#" name="" title="Info about project here">О ПРОЕКТЕ</a>
-      </nav>
-
-    </footer>
-
   </body>
 </html>
