--- a/coaches.html
+++ b/coaches.html
@@ -16,7 +16,7 @@
   <body>
     <!-- Header-->
     <header class="homeHeader">
-      <div class="headLogo"><a href="index.html" title="Home page here!">Guild of Mafia</a></div>
+      <div class="headLogo"><a href="home.html" title="Home page here!">Guild of Mafia</a></div>
       <nav>
         <a class="menuItem" href="gameRules.html" name="Rules of Game" title="Rules here">ПРАВИЛА<br>ИГРЫ</a>
         <a class="menuItem" href="historyOfMafia.html" name="History of Mafia" title="History of mafia here">ИСТОРИЯ<br>"МАФИИ"</a>
