--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="page">
 
       <h2 id="welcome">And now you do not have a way back</h2>
-      <a id="enterGuildLink" href="index.html"><input type="button" id="enterGuild" name="Enter Guild of Mafia" value="Join us" onclick="#"></a>
+      <a id="enterGuildLink" href="home.html"><input type="button" id="enterGuild" name="Enter Guild of Mafia" value="Join us" onclick="#"></a>
 
 <!--SLIDER-->
         <div class="smallImgMenu">
